--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ShoppingList</string>
+    <string name="delete">delete</string>
+    <string name="minus">minus</string>
+    <string name="plus">plus</string>
+    <string name="name">name</string>
+    <string name="amount">amount</string>
 </resources>
